# numf

./: CHANGELOG.md  Cargo.toml  README.md
src/: format.rs  lib.rs  main.rs
tests/: format.rs
